--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # добавил в репозиторий в качестве исключения для ускорения запуска
 # в продакшн версии необходимо удалить из репозитория
 MONGO_DB_PORT=27017
-FLASK_PORT=8081
-FLASK_HOST="5.35.83.245"
+FLASK_PORT=5000
+#FLASK_HOST="5.35.83.245"
+FLASK_HOST=0.0.0.0
