--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
     env_file:
       - .env
     ports:
-      - ${FLASK_PORT}:${FLASK_PORT}
+      - 5000:5000
+#      Источник: https://advicemama.ru/dostup-k-konteineru-servera-docker-flask-nevozmozen-cerez-xost
+#      - ${FLASK_PORT}:${FLASK_PORT}
     links:
       - mongo
 
