--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -13,4 +13,4 @@ RUN  pip3 install --no-cache-dir --upgrade pip \
 COPY . /app
 
 CMD python mongo_db_create.py; python main.py
-#CMD ["python", "main.py"]
+#CMD ["python", "app.py"]
