--- a/memory_check/Dockerfile
+++ b/memory_check/Dockerfile
@@ -10,6 +10,6 @@ COPY requirements.txt requirements.txt
 RUN  pip3 install --no-cache-dir --upgrade pip \
      && pip3 install --no-cache-dir -r requirements.txt
 
-COPY memory.py .
+COPY . .
 
 CMD ["python", "memory.py"]
